--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=employee-poc
 
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db?allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.username=emp_user
-spring.datasource.password=Emp@4321
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
